test/corpus/proto2/option.txt
================================================================================
Option statement (simple)
================================================================================

syntax = "proto2";

option deprecated = true;

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (option
   name: (option_name
          part: (identifier))
   value: (constant (bool (true)))))

================================================================================
Option statement (fully qualified identifier)
================================================================================

syntax = "proto2";

option (a.test.option) = true;

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (option
   name: (option_name
          part: (full_ident
            	 part: (identifier)
            	 part: (identifier)
            	 part: (identifier)))
   value: (constant (bool (true)))))

================================================================================
Option statement (block)
================================================================================

syntax = "proto2";

option test = {
  test: "a test"
};

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (option
   name: (option_name
          part: (identifier))
   value: (constant
   	   (message_value
   	    name: (identifier)
	    value: (constant (string))))))
