test/corpus/proto3/enum.txt
================================================================================
Enum (empty)
================================================================================

syntax = "proto3";

enum Test {}

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (enum
   name: (enum_name)
   (enum_body)))

================================================================================
Enum (option)
================================================================================

syntax = "proto3";

enum Test {
  option deprecated = true;
}

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (enum
   name: (enum_name)
   (enum_body
    (option
     name: (option_name
            part: (identifier))
     value: (constant (bool (true)))))))

================================================================================
Enum (empty statement)
================================================================================

syntax = "proto3";

enum Test {
  ;
}

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (enum
   name: (enum_name)
   (enum_body
    (empty_statement))))

================================================================================
Enum (value)
================================================================================

syntax = "proto3";

enum Test {
  TEST_UNSPECIFIED = 0;
}

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (enum
   name: (enum_name)
   (enum_body
    (value
     name: (identifier)
     tag: (int_lit (decimal_lit))))))

================================================================================
Enum (value option)
================================================================================

syntax = "proto3";

enum Test {
  TEST_ONE = 1 [deprecated = true];
}

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (enum
   name: (enum_name)
   (enum_body
    (value
     name: (identifier)
     tag: (int_lit (decimal_lit))
     options: (value_options
     	       (value_option
                name: (option_name
                       part: (identifier))
   	        value: (constant (bool (true)))))))))
