test/corpus/proto3/package.txt
================================================================================
Package statement (simple)
================================================================================

syntax = "proto3";

package a;

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (package
   name: (full_ident
   	  part: (identifier))))

================================================================================
Package statement (fully qualified identifier)
================================================================================

syntax = "proto3";

package google.protobuf;

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (package
   name: (full_ident
   	  part: (identifier)
	  part: (identifier))))
